--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=groceriesstore
+# Banco local - CodeBlog
+spring.datasource.url=jdbc:postgresql://localhost:5432/groceriesstore
+spring.datasource.username=postgres
+spring.datasource.password=docker
+spring.jpa.hibernate.ddl-auto=update
